package edu.fiuba.algo3.modelo;


interface Lapiz {

    void trazar(Posicion posicionInicial, Posicion posicionFinal);
}
