@startuml

interface Lapiz{
    Trazar(Posicion, Posicion)
}
Lapiz ...> Posicion
Lapiz ...> SectorDibujo

class LapizAbajo implements Lapiz, Bloque{
    - String
}

class LapizArriba implements Lapiz, Bloque{
    - String
}

class SectorDibujo{
    - {static} SectorDibujo
    - List<Segmento>
    - List<Segmento>
    - {static} crearInstancia()
    + {static} obtenerSectorDibujo(): SectorDibujo
    + reiniciar()
    + aplicarTrazo()
    + noAplicarTrazo()
    + obtenerSinTrazar(): List<Segmento>
    + obtenerDibujo(): List<Segmento>
}
@enduml